grammar.js
    source_file: $ => repeat($._node),
    _node: $ => choice($.print, $.if_statement, $.for_statement, $.extends_statement, $.include_statement, $.import_statement, $.from_statement, $.set_statement, $.set_block, $.call_block, $.with_statement, $.trans_statement, $.do_statement, $.autoescape_statement, $.raw_statement, $.debug_statement, $.filter_statement, $.block_statement, $.macro_statement, $.custom_statement, $.comment, $.text),
    statement_begin: $ => token(choice('{%', '{%-')),
    statement_end: $ => token(choice('%}', '-%}')),
    comment_begin: $ => token(choice('{#', '{#-')),
    comment_end: $ => token(choice('#}', '-#}')),
    print_begin: $ => token(choice('{{', '{{-')),
    print_end: $ => token(choice('}}', '-}}')),
    identifier: $ => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),
    string: $ => choice(
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
      seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
    ),
    number: $ => token(choice(
      /0[xX][0-9a-fA-F]+/,
      /0[oO][0-7]+/,
      /0[bB][01]+/,
      /\d+(\.\d+)?([eE][+-]?\d+)?/,
    )),
    boolean: $ => token(choice('true', 'false', 'True', 'False')),
    _argument_list: $ => seq(
      '(',
      optional(seq(
        $._argument,
        repeat(seq(',', $._argument)),
        optional(','),
      )),
      ')',
    ),
    function_call: $ => prec.left(seq(
      field('name', choice($.identifier, $.function_call)),
      $._argument_list,
    )),
    attribute_access: $ => prec.left(seq(
      field('object', $._primary_expression),
      '.',
      field('attribute', choice($.identifier, $.number)),
    )),
    _primary_expression: $ => choice(
      $._literal,
      $.parenthesized_expression,
      $.subscript,
      $.method_call,
      $.attribute_access,
      $.function_call,
      $.identifier,
    ),
    binary_expression: $ => choice(
      prec.left(1, seq(field('left', $._expression), field('operator', 'or'), field('right', $._expression))),
      prec.left(2, seq(field('left', $._expression), field('operator', 'and'), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', choice('==', '!=', '<', '>', '<=', '>=')), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', 'in'), field('right', $._expression))),
      prec.left(4, seq(field('left', $._expression), field('operator', alias(seq('not', 'in'), 'not in')), field('right', $._expression))),

      prec.left(5, seq(field('left', $._expression), field('operator', '~'), field('right', $._expression))),
      prec.left(6, seq(field('left', $._expression), field('operator', '+'), field('right', $._expression))),
      prec.left(6, seq(field('left', $._expression), field('operator', '-'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '*'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '/'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '//'), field('right', $._expression))),
      prec.left(7, seq(field('left', $._expression), field('operator', '%'), field('right', $._expression))),
      prec.right(8, seq(field('left', $._expression), field('operator', '**'), field('right', $._expression))),
    ),
    if_keyword: $ => token(prec(1, 'if')),
    endif_keyword: $ => token(prec(1, 'endif')),
    block_keyword: $ => token(prec(1, 'block')),
    endblock_keyword: $ => token(prec(1, 'endblock')),
    scoped_keyword: $ => token(prec(1, 'scoped')),
    required_keyword: $ => token(prec(1, 'required')),
    call_keyword: $ => token(prec(1, 'call')),
    endcall_keyword: $ => token(prec(1, 'endcall')),
    autoescape_keyword: $ => token(prec(1, 'autoescape')),
    endautoescape_keyword: $ => token(prec(1, 'endautoescape')),
    _expression: $ => choice(
      $._primary_expression,
      $.binary_expression,
      $.unary_expression,
      $.test_expression,
      $.ternary_expression,
      $.filter,
    ),
    print: $ => seq(
      $.print_begin,
      $._expression,
      $.print_end,
    ),

    if_open: $ => seq(
      $.statement_begin,
      $.if_keyword,
      field('condition', $._expression),
      $.statement_end,
    ),
    if_close: $ => seq(
      $.statement_begin,
      $.endif_keyword,
      $.statement_end,
    ),
    _body_node: $ => choice(
      $.print, $.if_statement, $.for_statement, $.set_statement, $.set_block,
      $.include_statement, $.import_statement, $.from_statement,
      $.call_block, $.with_statement, $.block_statement,
      $.macro_statement, $.trans_statement, $.autoescape_statement,
      $.raw_statement, $.do_statement, $.debug_statement, $.filter_statement,
      $.custom_statement, $.comment, $.text,
    ),
    if_statement: $ => seq(
      $.if_open,
      repeat(prec.right(choice($._body_node, $.elif_clause, $.else_clause))),
      $.if_close,
    ),

    block_open: $ => seq(
      $.statement_begin,
      $.block_keyword,
      field('name', $.identifier),
      optional(choice(
        seq($.scoped_keyword, optional($.required_keyword)),
        $.required_keyword,
      )),
      $.statement_end,
    ),
    block_close: $ => seq(
      $.statement_begin,
      $.endblock_keyword,
      optional(field('name', $.identifier)),
      $.statement_end,
    ),
    block_statement: $ => seq(
      $.block_open,
      repeat(prec.right($._body_node)),
      $.block_close,
    ),

    caller_args: $ => seq(
      '(',
      optional(seq(
        field('name', $.identifier),
        repeat(seq(',', field('name', $.identifier))),
        optional(','),
      )),
      ')',
    ),
    _call_target: $ => prec.left(seq(
      field('object', choice($.identifier, alias($._call_attr_chain, $.attribute_access))),
      '.',
      field('method', $.identifier),
      $._argument_list,
    )),
    call_open: $ => seq(
      $.statement_begin,
      $.call_keyword,
      optional($.caller_args),
      field('call', choice($.function_call, alias($._call_target, $.method_call))),
      $.statement_end,
    ),
    call_close: $ => seq(
      $.statement_begin,
      $.endcall_keyword,
      $.statement_end,
    ),
    call_block: $ => seq(
      $.call_open,
      repeat(prec.right($._body_node)),
      $.call_close,
    ),

    autoescape_open: $ => seq(
      $.statement_begin,
      $.autoescape_keyword,
      optional(field('value', $._expression)),
      $.statement_end,
    ),
    autoescape_close: $ => seq(
      $.statement_begin,
      $.endautoescape_keyword,
      $.statement_end,
    ),
    autoescape_statement: $ => seq(
      $.autoescape_open,
      repeat(prec.right($._body_node)),
      $.autoescape_close,
    ),

    comment: $ => seq(
      $.comment_begin,
      optional(field('body', $.comment_content)),
      $.comment_end,
    ),
    comment_content: $ => /([^#-]|#[^}]|-[^#])+/,
    text: $ => choice(
      /[^{]+/,
      /\{[^{%#]/,
    ),
  }
});
