test/corpus/binary_expression.txt
================================================================================
Addition
================================================================================
{{ 1 + 2 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Subtraction
================================================================================
{{ 3 - 1 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Multiplication
================================================================================
{{ 2 * 3 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Division
================================================================================
{{ 6 / 2 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Integer division
================================================================================
{{ 7 // 2 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Modulo
================================================================================
{{ 7 % 3 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Power
================================================================================
{{ 2 ** 3 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (number))
    (print_end)))

================================================================================
Concatenation
================================================================================
{{ "a" ~ "b" }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (string)
      right: (string))
    (print_end)))

================================================================================
Comparison equals
================================================================================
{{ x == y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Comparison not equals
================================================================================
{{ x != y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Comparison less than
================================================================================
{{ x < y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Comparison greater than
================================================================================
{{ x > y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Comparison less than or equal
================================================================================
{{ x <= y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Comparison greater than or equal
================================================================================
{{ x >= y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Logical and
================================================================================
{{ x and y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Logical or
================================================================================
{{ x or y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
In operator
================================================================================
{{ x in y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Not in operator
================================================================================
{{ x not in y }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (identifier))
    (print_end)))

================================================================================
Precedence: multiplication over addition
================================================================================
{{ 1 + 2 * 3 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (binary_expression
        left: (number)
        right: (number)))
    (print_end)))

================================================================================
Precedence: and over or
================================================================================
{{ a or b and c }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (identifier)
      right: (binary_expression
        left: (identifier)
        right: (identifier)))
    (print_end)))

================================================================================
Precedence: power right associative
================================================================================
{{ 2 ** 3 ** 4 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (number)
      right: (binary_expression
        left: (number)
        right: (number)))
    (print_end)))

================================================================================
Chained addition left associative
================================================================================
{{ 1 + 2 + 3 }}
--------------------------------------------------------------------------------

(source_file
  (print
    (print_begin)
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number))
    (print_end)))
