test/corpus/comment.txt
================================================================================
Simple comment
================================================================================
{# comment #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Empty comment
================================================================================
{##}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_end)))

================================================================================
Comment with left whitespace control
================================================================================
{#- comment #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Comment with right whitespace control
================================================================================
{# comment -#}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Comment with both whitespace control
================================================================================
{#- comment -#}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Multi-word comment
================================================================================
{# this is a longer comment #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Comment with hash inside
================================================================================
{# comment # with hash #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Comment with dash inside
================================================================================
{# comment - with dash #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))

================================================================================
Multiline comment
================================================================================
{# this is
a multiline
comment #}
--------------------------------------------------------------------------------

(source_file
  (comment
    (comment_begin)
    (comment_content)
    (comment_end)))
